tests/baselines/reference/functionOverloads12.errors.txt
tests/cases/compiler/functionOverloads12.ts(3,48): error TS7027: Unreachable code detected.


==== tests/cases/compiler/functionOverloads12.ts (1 errors) ====
    function foo():string;
    function foo():number;
    function foo():any { if (true) return ""; else return 0;}
                                                   ~~~~~~
!!! error TS7027: Unreachable code detected.
    